--- a/SWD607_Assignment2/Resources/layout/AddEdit.xml
+++ b/SWD607_Assignment2/Resources/layout/AddEdit.xml
@@ -38,8 +38,7 @@
                 android:textSize="40sp"
                 android:textStyle="bold"
                 android:textColor="@android:color/black"
-                android:layout_gravity="center"                
-                android:layout_marginStart="20dp"
+                android:layout_gravity="center"                     
                 android:layout_marginTop="10dp" />
 
             <TextView
@@ -90,7 +89,7 @@
                     android:id="@+id/spinnerNumber"
                     android:layout_width="120dp"
                     android:layout_height="50dp"
-                    android:textSize="25sp"
+                    android:textSize="30sp"
                     android:background="@drawable/white_button_no_border"
                     android:paddingEnd="10dp"
                     android:layout_marginStart="15dp"
@@ -122,34 +121,32 @@
             <TextView
                 android:id="@+id/textView38"
                 android:layout_width="800dp"
-                android:layout_height="350dp"
+                android:layout_height="200dp"
                 android:layout_below="@+id/timePicker1"
                 android:textColor="@android:color/black"
                 android:textSize="30sp"
                 android:textStyle="bold"
-                android:paddingStart="20dp"
+                android:paddingStart="10dp"
                 android:paddingTop="10dp"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="20dp"
                 android:layout_marginStart="20dp"
                 android:layout_marginEnd="20dp"                                  
                 android:background="@drawable/gray_button" />
-
-            
-
+         
             <Button
                 android:id="@+id/buttonEdit"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/add_button"
-                android:textSize="25sp"
+                android:textSize="35sp"
                 android:textStyle="bold"
                 android:background="@drawable/blue_button"
                 android:textColor="@android:color/white"
                 android:padding="16dp"
-                android:layout_marginStart="40dp"
-                android:layout_marginEnd="40dp"
-                android:layout_marginTop="1350dp"
-                android:layout_below="@+id/buttonAdd"
+                android:layout_marginStart="20dp"
+                android:layout_marginEnd="20dp"
+                android:layout_marginTop="20dp"
+                android:layout_below="@+id/textView38"
                 android:layout_centerHorizontal="true"
                 android:textAllCaps="false"/>          
 
