--- a/SWD607_Assignment2/Resources/layout/EditPage.xml
+++ b/SWD607_Assignment2/Resources/layout/EditPage.xml
@@ -29,17 +29,16 @@
             android:background="@android:color/white"
             android:padding="2dp">
 
-            <!-- Title : Make Reservation -->
+            <!-- Edit Reservation -->
             <TextView
                 android:id="@+id/textViewReservation"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/reservation_tag"
+                android:text="@string/edit_reservation_tag"
                 android:textSize="40sp"
                 android:textStyle="bold"
                 android:textColor="@android:color/black"
-                android:layout_gravity="center"
-                android:layout_marginStart="20dp"
+                android:layout_gravity="center"              
                 android:layout_marginTop="10dp" />
 
             <TextView
@@ -51,8 +50,8 @@
                 android:textStyle="bold"
                 android:textColor="@android:color/black"
                 android:layout_below="@+id/textViewReservation"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginTop="30dp" />
+                android:layout_gravity="center"
+                android:layout_marginTop="10dp" />
 
             <!-- Date Section -->
             <RelativeLayout
@@ -62,7 +61,7 @@
                 android:orientation="horizontal"
                 android:background="@android:color/white"
                 android:padding="16dp"
-                android:layout_margin="15dp"
+                android:layout_margin="10dp"
                 android:layout_below="@+id/textAucklandRangers"
                 android:layout_alignParentBottom="false">
 
@@ -90,7 +89,7 @@
                         android:id="@+id/spinnerNumber"
                         android:layout_width="120dp"
                         android:layout_height="50dp"
-                        android:textSize="25sp"
+                        android:textSize="30sp"
                         android:background="@drawable/white_button_no_border"
                         android:paddingEnd="10dp"
                         android:layout_marginStart="15dp"
@@ -116,43 +115,24 @@
                     android:layout_centerHorizontal="true"
                     android:layout_centerVertical="true"
                     android:layout_below="@+id/datePicker1"
-                    android:id="@+id/timePicker1" />
-
-                <!-- ListView -->
-                <TextView
-                    android:id="@+id/textView38"
-                    android:layout_width="800dp"
-                    android:layout_height="350dp"
-                    android:layout_below="@+id/timePicker1"
-                    android:textColor="@android:color/black"
-                    android:textSize="30sp"
-                    android:textStyle="bold"
-                    android:paddingStart="20dp"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginStart="20dp"
-                    android:layout_marginEnd="20dp"
-                    android:background="@drawable/gray_button" />
-
-                
+                    android:id="@+id/timePicker1" />            
 
                 <Button
                     android:id="@+id/buttonEdit"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="@string/edit_button"
-                    android:textSize="25sp"
+                    android:text="@string/save_button"
+                    android:textSize="35sp"
                     android:textStyle="bold"
-                    android:background="@drawable/blue_button"
+                    android:background="@drawable/gray_button"
                     android:textColor="@android:color/white"
                     android:padding="16dp"
-                    android:layout_marginStart="40dp"
-                    android:layout_marginEnd="40dp"
-                    android:layout_marginTop="1350dp"
-                    android:layout_below="@+id/buttonAdd"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginEnd="20dp"                    
+                    android:layout_below="@+id/timePicker1"
                     android:layout_centerHorizontal="true"
+                    android:layout_marginTop="10dp"
                     android:textAllCaps="false"/>
-
-
 
             </RelativeLayout>
 
